<resources>
    <string name="app_name">Vault RSA</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Login text-->

    <string name="welcome">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_pwd">Forgot password?</string>
    <string name="log_in">Log In</string>
    <string name="nu_sign_up">New user? Sign Up</string>
    <string name="biometrics">Use biometrics</string>
    <string name="sign_up_title">Create Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Log Out</string>
    <string name="logout_title">User Information</string>
    <string name="account">Account</string>

    <!-- Login text-->
    <string name="generate_password">Generate Password</string>
    <string name="generate">Generate</string>
    <string name="generated_password">Generated Password</string>

    <!-- Bottom Nav text-->

    <string name="vault">Vault</string>
    <string name="generator">Generator</string>
    <string name="rsa_info">RSA Info</string>
    <string name="settings">Settings</string>

</resources>