<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/primaryText"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:background="@color/secondaryBackground"
        android:padding="16dp"
        android:textColor="@color/primaryText"
        android:textColorHint="@color/secondaryText"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/title_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="@color/secondaryBackground"
        android:padding="16dp"
        android:textColor="@color/primaryText"
        android:textColorHint="@color/secondaryText"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <TextView
        android:id="@+id/text_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pwd"
        android:textColor="@color/secondaryText"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:backgroundTint="@color/yellowHighlighter"
        android:textColor="@color/tertiaryText"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <Button
        android:id="@+id/btn_nu_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nu_sign_up"
        android:backgroundTint="@color/secondaryButton"
        android:textColor="@color/primaryText"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <Button
        android:id="@+id/btn_biometrics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/biometrics"
        android:backgroundTint="@color/secondaryBackground"
        android:textColor="@color/primaryText"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_nu_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
