<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_password"
        android:textSize="18sp"
        android:textColor="@color/primaryText"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnGenerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate"
        android:textColor="@color/tertiaryText"
        android:backgroundTint="@color/primaryButton"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/generated_password"
        android:textColorHint="@color/white"
        android:inputType="text"
        android:focusable="false"
        android:clickable="false"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>
</LinearLayout>
